Avoid primitive wrapper creation
Change-Id: I341c00fa18e8a77bdb5179aba1b5c4e632d49906
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>