@@ -33,7 +33,7 @@ public class NumberToLongConverterTest extends NumberToNumberTestHarness {
 
 	@Override
 	protected Number doGetOutOfRangeNumber() {
-		return new Double(Double.MAX_VALUE);
+		return Double.valueOf(Double.MAX_VALUE);
 	}
 
 	@Override
