@@ -28,7 +28,7 @@ public class NumberToFloatValidatorTest extends
 
 	@Override
 	protected Number doGetOutOfRangeNumber() {
-		return new Double(Double.MAX_VALUE);
+		return Double.valueOf(Double.MAX_VALUE);
 	}
 
 	@Override
