@@ -28,7 +28,7 @@ public class NumberToIntegerValidatorTest extends
 
 	@Override
 	protected Number doGetOutOfRangeNumber() {
-		return new Long((long) Integer.MAX_VALUE + 1);
+		return Long.valueOf((long) Integer.MAX_VALUE + 1);
 	}
 
 	@Override
